--- a/try.ipynb
+++ b/try.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "LazyLoadedDict({'accident_2014_4': LazyLoadedValue(<pandas.DataFrame>), 'accident_2015_6': LazyLoadedValue(<pandas.DataFrame>), 'accident_2016_8': LazyLoadedValue(<pandas.DataFrame>), 'accident_2017_1': LazyLoadedValue(<pandas.DataFrame>), 'accident_2018_2': LazyLoadedValue(<pandas.DataFrame>), 'guidance_csv_11': LazyLoadedValue(<pandas.DataFrame>)})"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,363 +50,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = results.dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results2 = dw.query('datagov-uk/053a6529-6c8c-42ac-ae1e-455b2708e535', 'SELECT * FROM accident_2015_6')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = results2.dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final = pd.concat([df1, df2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>reference_number</th>\n",
-       "      <th>grid_ref_easting</th>\n",
-       "      <th>grid_ref_northing</th>\n",
-       "      <th>number_of_vehicles</th>\n",
-       "      <th>accident_date</th>\n",
-       "      <th>time_24hr</th>\n",
-       "      <th>1st_road_class</th>\n",
-       "      <th>1st_road_class_no</th>\n",
-       "      <th>road_surface</th>\n",
-       "      <th>lighting_conditions</th>\n",
-       "      <th>weather_conditions</th>\n",
-       "      <th>local_authority</th>\n",
-       "      <th>casualty_class</th>\n",
-       "      <th>casualty_severity</th>\n",
-       "      <th>sex_of_casualty</th>\n",
-       "      <th>age_of_casualty</th>\n",
-       "      <th>vehicle_number</th>\n",
-       "      <th>type_of_vehicle</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>11S0281</td>\n",
-       "      <td>407491</td>\n",
-       "      <td>428929</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2014-01-28</td>\n",
-       "      <td>835</td>\n",
-       "      <td>6</td>\n",
-       "      <td>U</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Calderdale</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11S1147</td>\n",
-       "      <td>412912</td>\n",
-       "      <td>429039</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2014-01-28</td>\n",
-       "      <td>1745</td>\n",
-       "      <td>6</td>\n",
-       "      <td>U</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Calderdale</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>11S1147</td>\n",
-       "      <td>412912</td>\n",
-       "      <td>429039</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2014-01-28</td>\n",
-       "      <td>1745</td>\n",
-       "      <td>6</td>\n",
-       "      <td>U</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Calderdale</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11U0285</td>\n",
-       "      <td>407179</td>\n",
-       "      <td>424776</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2014-01-30</td>\n",
-       "      <td>900</td>\n",
-       "      <td>6</td>\n",
-       "      <td>U</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Calderdale</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>29</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11U0285</td>\n",
-       "      <td>407179</td>\n",
-       "      <td>424776</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2014-01-30</td>\n",
-       "      <td>900</td>\n",
-       "      <td>6</td>\n",
-       "      <td>U</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Calderdale</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>618</th>\n",
-       "      <td>1CU0561</td>\n",
-       "      <td>401834</td>\n",
-       "      <td>419128</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2014-12-30</td>\n",
-       "      <td>1341</td>\n",
-       "      <td>3</td>\n",
-       "      <td>A58</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Calderdale</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>39</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>619</th>\n",
-       "      <td>1CU0561</td>\n",
-       "      <td>401834</td>\n",
-       "      <td>419128</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2014-12-30</td>\n",
-       "      <td>1341</td>\n",
-       "      <td>3</td>\n",
-       "      <td>A58</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Calderdale</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>620</th>\n",
-       "      <td>1CU0803</td>\n",
-       "      <td>409343</td>\n",
-       "      <td>424955</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2014-12-30</td>\n",
-       "      <td>1535</td>\n",
-       "      <td>6</td>\n",
-       "      <td>U</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Calderdale</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>621</th>\n",
-       "      <td>1CV0997</td>\n",
-       "      <td>405698</td>\n",
-       "      <td>423377</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2014-12-31</td>\n",
-       "      <td>1800</td>\n",
-       "      <td>6</td>\n",
-       "      <td>U</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Calderdale</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>34</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>622</th>\n",
-       "      <td>1CV0997</td>\n",
-       "      <td>405698</td>\n",
-       "      <td>423377</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2014-12-31</td>\n",
-       "      <td>1800</td>\n",
-       "      <td>6</td>\n",
-       "      <td>U</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Calderdale</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>34</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>623 rows × 18 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    reference_number  grid_ref_easting  grid_ref_northing  number_of_vehicles  \\\n",
-       "0            11S0281            407491             428929                   1   \n",
-       "1            11S1147            412912             429039                   1   \n",
-       "2            11S1147            412912             429039                   1   \n",
-       "3            11U0285            407179             424776                   2   \n",
-       "4            11U0285            407179             424776                   2   \n",
-       "..               ...               ...                ...                 ...   \n",
-       "618          1CU0561            401834             419128                   4   \n",
-       "619          1CU0561            401834             419128                   4   \n",
-       "620          1CU0803            409343             424955                   1   \n",
-       "621          1CV0997            405698             423377                   2   \n",
-       "622          1CV0997            405698             423377                   2   \n",
-       "\n",
-       "    accident_date  time_24hr  1st_road_class 1st_road_class_no  road_surface  \\\n",
-       "0      2014-01-28        835               6                 U             2   \n",
-       "1      2014-01-28       1745               6                 U             2   \n",
-       "2      2014-01-28       1745               6                 U             2   \n",
-       "3      2014-01-30        900               6                 U             2   \n",
-       "4      2014-01-30        900               6                 U             2   \n",
-       "..            ...        ...             ...               ...           ...   \n",
-       "618    2014-12-30       1341               3               A58             2   \n",
-       "619    2014-12-30       1341               3               A58             2   \n",
-       "620    2014-12-30       1535               6                 U             2   \n",
-       "621    2014-12-31       1800               6                 U             2   \n",
-       "622    2014-12-31       1800               6                 U             2   \n",
-       "\n",
-       "     lighting_conditions  weather_conditions local_authority  casualty_class  \\\n",
-       "0                      1                   9      Calderdale               3   \n",
-       "1                      4                   1      Calderdale               3   \n",
-       "2                      4                   1      Calderdale               3   \n",
-       "3                      1                   8      Calderdale               1   \n",
-       "4                      1                   8      Calderdale               2   \n",
-       "..                   ...                 ...             ...             ...   \n",
-       "618                    1                   1      Calderdale               1   \n",
-       "619                    1                   1      Calderdale               1   \n",
-       "620                    1                   1      Calderdale               3   \n",
-       "621                    4                   1      Calderdale               1   \n",
-       "622                    4                   1      Calderdale               2   \n",
-       "\n",
-       "     casualty_severity  sex_of_casualty  age_of_casualty  vehicle_number  \\\n",
-       "0                    3                2                8               1   \n",
-       "1                    3                2               15               1   \n",
-       "2                    3                1               17               1   \n",
-       "3                    3                2               29               2   \n",
-       "4                    3                1                9               2   \n",
-       "..                 ...              ...              ...             ...   \n",
-       "618                  3                2               39               2   \n",
-       "619                  3                1               25               3   \n",
-       "620                  3                1                5               1   \n",
-       "621                  2                2               34               1   \n",
-       "622                  2                1               34               2   \n",
-       "\n",
-       "     type_of_vehicle  \n",
-       "0                  9  \n",
-       "1                  9  \n",
-       "2                  9  \n",
-       "3                  9  \n",
-       "4                  9  \n",
-       "..               ...  \n",
-       "618                9  \n",
-       "619                9  \n",
-       "620                9  \n",
-       "621                9  \n",
-       "622                9  \n",
-       "\n",
-       "[623 rows x 18 columns]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1179 entries, 0 to 555\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   reference_number     1179 non-null   object\n",
+      " 1   grid_ref_easting     1179 non-null   int64 \n",
+      " 2   grid_ref_northing    1179 non-null   int64 \n",
+      " 3   number_of_vehicles   1179 non-null   int64 \n",
+      " 4   accident_date        1179 non-null   object\n",
+      " 5   time_24hr            1179 non-null   int64 \n",
+      " 6   1st_road_class       1179 non-null   int64 \n",
+      " 7   1st_road_class_no    1179 non-null   object\n",
+      " 8   road_surface         1179 non-null   int64 \n",
+      " 9   lighting_conditions  1179 non-null   int64 \n",
+      " 10  weather_conditions   1179 non-null   int64 \n",
+      " 11  local_authority      1179 non-null   object\n",
+      " 12  casualty_class       1179 non-null   int64 \n",
+      " 13  casualty_severity    1179 non-null   int64 \n",
+      " 14  sex_of_casualty      1179 non-null   int64 \n",
+      " 15  age_of_casualty      1179 non-null   int64 \n",
+      " 16  vehicle_number       1179 non-null   int64 \n",
+      " 17  type_of_vehicle      1179 non-null   int64 \n",
+      "dtypes: int64(14), object(4)\n",
+      "memory usage: 175.0+ KB\n"
+     ]
     }
    ],
    "source": [
-    "results.dataframe"
+    "df_final.info()"
    ]
   }
  ],
