--- a/sap_automation.ipynb
+++ b/sap_automation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2a146733",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import win32com.client\n",
     "import pythoncom\n",
     "import subprocess\n",
-    "import os"
+    "import os\n",
+    "import time"
    ]
   },
   {
@@ -20,13 +21,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_sap(sap_path, ecc_vbs_list, apo_vbs_list, max_instances, data_folder):\n",
-    "    pythoncom.CoInitialize\n",
-    "    subprocess.Popen(os.path.abspath(sap_path))\n",
-    "    \n",
-    "    ecc_count = min(len(ecc_vbs_list), max_instances) #Depending on the maximum number of instances, as allowed.\n",
+    "def run_sap(ecc_vbs_list, apo_vbs_list, data_folder):\n",
+    "    #Variables\n",
+    "    sap_path = r'C:\\Program Files\\SAP\\FrontEnd\\SAPgui\\saplogon.exe' #Modify based on your SAP installation.\n",
+    "    max_instances = 6 #Modify based on the maximum number of instances of SAP windows allowed.\n",
+    "    ecc_count = min(len(ecc_vbs_list), max_instances)\n",
     "    apo_count = min(len(apo_vbs_list), max_instances)\n",
     "    sap_open_check = False\n",
+    "\n",
+    "    pythoncom.CoInitialize\n",
+    "    subprocess.Popen(sap_path)\n",
     "    while not sap_open_check:\n",
     "        try:\n",
     "            sapgui = win32com.client.GetObject('SAPGUI')\n",
@@ -35,8 +39,100 @@
     "            pass\n",
     "    app = sapgui.GetScriptingEngine\n",
     "\n",
-    "    conn_ecc = app.OpenConnection('ECC', True) #Modify connection name as needed or add as another argument\n",
-    "    session_ecc = conn_ecc.Children(0)\n"
+    "    conn_ecc = app.OpenConnection('ECC', True) #Modify connection name as needed or pass as another argument\n",
+    "    session_ecc = conn_ecc.Children(0)\n",
+    "    for i in range(ecc_count-1): #Opens additional windows for ECC, up to max allowed amount\n",
+    "        session_ecc.findById(\"wnd[0]\").sendVKey(74)\n",
+    "        time.sleep(2)\n",
+    "\n",
+    "    conn_apo = app.OpenConnection('APO', True)\n",
+    "    session_apo = conn_apo.Children(0)\n",
+    "    for i in range(apo_count-1):\n",
+    "        session_apo.findById(\"wnd[0]\").sendVKey(74)\n",
+    "        time.sleep(2)\n",
+    "    \n",
+    "    ecc_proc_list = {} #List to keep track of running processes.\n",
+    "    for i in range(ecc_count): #limit to max windows opened; not list of vbs files.\n",
+    "        record = ['wscript.exe', ecc_vbs_list[i][0], str(0), str(i), os.path.abspath(data_folder)] #Str(0) refers to first connection (in this case, ECC).\n",
+    "        if len(ecc_vbs_list[i]) >1:\n",
+    "            for x in range(len(ecc_vbs_list[i])-1): #Allows for additional arguments to be passed into wscript.exe. Make sure vbs files are ready to receive arguments.\n",
+    "                x += 1\n",
+    "                record.append(ecc_vbs_list[i][x])\n",
+    "        else:\n",
+    "            pass\n",
+    "        session = subprocess.Popen(record)\n",
+    "        key = \"0\" + str(i)\n",
+    "        ecc_proc_list[key] = session\n",
+    "    \n",
+    "    apo_proc_list = {}\n",
+    "    for i in range(apo_count):\n",
+    "        record = ['wscript.exe', apo_vbs_list[i][0], str(1), str(i), os.path.abspath(data_folder)] #Str(1) refers to second connection (in this case, APO).\n",
+    "        if len(apo_vbs_list[i]) >1:\n",
+    "            for x in range(len(apo_vbs_list[i])-1):\n",
+    "                x += 1\n",
+    "                record.append(apo_vbs_list[i][x])\n",
+    "        else:\n",
+    "            pass\n",
+    "        session = subprocess.Popen(record)\n",
+    "        key = \"1\" + str(i)\n",
+    "        apo_proc_list[key] = session\n",
+    "    \n",
+    "    #Removes vbs files already ran.\n",
+    "    for i in range(ecc_count):\n",
+    "        ecc_vbs_list.pop(0)\n",
+    "    for i in range(apo_count):\n",
+    "        ecc_vbs_list.pop(0)\n",
+    "\n",
+    "    while bool(ecc_proc_list) or bool(apo_proc_list): #while either process list is not empty, loop.\n",
+    "        for proc in list(ecc_proc_list):\n",
+    "            if ecc_proc_list[proc].poll() == 0: #if a process is done...\n",
+    "                if bool(ecc_vbs_list): #and if ecc_vbs_list is not empty, replace process that is completed with top one from remaining vbs list.\n",
+    "                    record = ['wscript.exe', ecc_vbs_list[0][0], str(proc[0]), str(proc[1]), os.path.abspath(data_folder)] #Runs first item of vbs list, using the previous window reference.\n",
+    "                    if len(ecc_vbs_list[0]) >1:\n",
+    "                        for x in range(len(ecc_vbs_list[0])-1): #Allows for additional arguments\n",
+    "                            x += 1\n",
+    "                            record.append(ecc_vbs_list[0][x])\n",
+    "                    else:\n",
+    "                        pass\n",
+    "                    session = subprocess.Popen(record)\n",
+    "                    ecc_proc_list[proc] = session #replace the old process with new process in proc list\n",
+    "                    ecc_vbs_list.pop(0) #remove newly run file from vbs list\n",
+    "                else:\n",
+    "                    ecc_proc_list.pop(proc) #if no more vbs files to run and proc is done, remove until empty\n",
+    "            else:\n",
+    "                pass #if no slots are open, check apo and continue loop.\n",
+    "        for proc in list(apo_proc_list):\n",
+    "            if apo_proc_list[proc].poll() == 0:\n",
+    "                if bool(apo_vbs_list):\n",
+    "                    record = ['wscript.exe', apo_vbs_list[0][0], str(proc[0]), str(proc[1]), os.path.abspath(data_folder)]\n",
+    "                    if len(apo_vbs_list[0]) >1:\n",
+    "                        for x in range(len(apo_vbs_list[0])-1):\n",
+    "                            x += 1\n",
+    "                            record.append(apo_vbs_list[0][x])\n",
+    "                    else:\n",
+    "                        pass\n",
+    "                    session = subprocess.Popen(record)\n",
+    "                    apo_proc_list[proc] = session\n",
+    "                    apo_vbs_list.pop(0)\n",
+    "                else:\n",
+    "                    apo_proc_list.pop(proc)\n",
+    "            else:\n",
+    "                pass\n",
+    "    #When both process lists are empty, shut down SAP.\n",
+    "    time.sleep(5)\n",
+    "    os.system(\"taskkill /f /im saplogon.exe\")\n",
+    "    print('All vbs files ran and SAP terminated.')\n",
+    "    pythoncom.CoUninitialize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcd1deb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_sap([[]], [[]], r'C:\\\\Users\\\\username\\\\Data_Files\\\\')"
    ]
   }
  ],
