Include some examples of possible arguments

--- a/sap_automation.ipynb
+++ b/sap_automation.ipynb
@@ -128,11 +128,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "28d9218b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vbs_file_path1 = r'C:\\Users\\username\\VBS\\sap_tcode1.vbs'\n",
+    "variant_name1 = 'Variant'\n",
+    "file_name1 = 'filename.xlsx'\n",
+    "vbs_file_path2 = r'C:\\Users\\username\\VBS\\sap_tcode2.vbs'\n",
+    "variant_name2 = 'Variant2'\n",
+    "plant1 = 'plant_a'\n",
+    "plant2 = 'plant_b'\n",
+    "file_name2 = 'filename2.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bcd1deb4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_sap([[]], [[]], r'C:\\\\Users\\\\username\\\\Data_Files\\\\')"
+    "run_sap([[vbs_file_path1, variant_name1, file_name1], [vbs_file_path2, variant_name2, plant1, file_name2], [vbs_file_path2, variant_name2, plant2, file_name2]], [[]], r'C:\\\\Users\\\\username\\\\Data_Files\\\\')"
    ]
   }
  ],
