--- a/sap_automation.ipynb
+++ b/sap_automation.ipynb
@@ -139,7 +139,7 @@
     "variant_name2 = 'Variant2'\n",
     "plant1 = 'plant_a'\n",
     "plant2 = 'plant_b'\n",
-    "file_name2 = 'filename2.csv'"
+    "file_name2 = 'filename 2 {}.csv'"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_sap([[vbs_file_path1, variant_name1, file_name1], [vbs_file_path2, variant_name2, plant1, file_name2], [vbs_file_path2, variant_name2, plant2, file_name2]], [[]], r'C:\\\\Users\\\\username\\\\Data_Files\\\\')"
+    "run_sap([[vbs_file_path1, variant_name1, file_name1], [vbs_file_path2, variant_name2, plant1, file_name2.format(plant1)], [vbs_file_path2, variant_name2, plant2, file_name2.format(plant2)]], [[]], r'C:\\\\Users\\\\username\\\\Data_Files\\\\')"
    ]
   }
  ],
